# skse-rust-template

./: .clangd  .gitignore  CMakeLists.txt  Cargo.toml  LICENSE.md  README.md  justfile  vcpkg.json
cmake/: sourcelist.cmake
src/: PCH.h  lib.rs  main.cpp
src/bridge/: cosave.rs  logs.rs  mod.rs  strings.rs  wrappers.rs
src/skse/: cosave.cpp  hooks.cpp  hooks.h  papyrus.cpp  papyrus.h  sinks.cpp  sinks.h
src/util/: log.h  util.cpp  util.h
